--- a/gitrec/frontend/package.json
+++ b/gitrec/frontend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node index.js",
+    "server": "nodemon index.js --ignore client"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
@@ -14,7 +16,8 @@
     "github-markdown-css": "^4.0.0",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-cli": "^2.9.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
